* added a new color for a softer visualization of table data

--- a/source/index.html
+++ b/source/index.html
@@ -70,13 +70,13 @@
                         <div class="text-accent">text-accent</div>
                         <div class="text-regular">text-regular</div>
                         <div class="text-disable">text-disable</div>
-                        <div class="text-white">text-white</div>
+                        <div class="text-light">text-light</div>
                         <div class="text-black">text-black</div>
                         <div class="text-gray">text-gray</div> -->
                         <h5>Температура</h5>
                         <table class='table table-block'>
                             <thead>
-                                <tr class="text-white">
+                                <tr class="text-light">
                                     <th>Датчики</th>
                                     <th>Текущая</th>
                                     <th>MIN</th>
@@ -85,37 +85,37 @@
                             </thead>
                             <tbody class="text-success">
                                 <tr>
-                                    <td class="text-white">Sensor 2</td>
+                                    <td class="text-light">Sensor 2</td>
                                     <td class="text-danger">value</td>
                                     <td>value</td>
                                     <td>value</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Sensor 3</td>
+                                    <td class="text-light">Sensor 3</td>
                                     <td>value</td>
                                     <td class="text-danger">value</td>
                                     <td>value</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Sensor 6</td>
+                                    <td class="text-light">Sensor 6</td>
                                     <td class="text-danger">value</td>
                                     <td class="text-danger">value</td>
                                     <td class="text-danger">value</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Sensor 9</td>
+                                    <td class="text-light">Sensor 9</td>
                                     <td>value</td>
                                     <td class="text-danger">value</td>
                                     <td>value</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Sensor 11</td>
+                                    <td class="text-light">Sensor 11</td>
                                     <td>value</td>
                                     <td class="text-danger">value</td>
                                     <td>value</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Sensor 13</td>
+                                    <td class="text-light">Sensor 13</td>
                                     <td class="text-danger">value</td>
                                     <td class="text-danger">value</td>
                                     <td>value</td>
@@ -125,22 +125,22 @@
                         <h5>Периметр</h5>
                         <table class='table table-block'>
                             <thead>
-                                <tr class="text-white">
+                                <tr class="text-light">
                                     <th>Расположение</th>
                                     <th>Состояние</th>
                                 </tr>
                             </thead>
                             <tbody class="text-success">
                                 <tr>
-                                    <td class="text-white">Вход 1</td>
+                                    <td class="text-light">Вход 1</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Окна душевая</td>
+                                    <td class="text-light">Окна душевая</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Ворота</td>
+                                    <td class="text-light">Ворота</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                             </tbody>
@@ -148,7 +148,7 @@
                         <h5>Вентиляция</h5>
                         <table class='table table-block'>
                             <thead>
-                                <tr class="text-white">
+                                <tr class="text-light">
                                     <th>Расположение</th>
                                     <th>Состояние</th>
                                     <th>Авария</th>
@@ -171,7 +171,7 @@
                     <div class="card-title">Температура</div>
                     <table class='table table-block'>
                         <thead>
-                            <tr class="text-white">
+                            <tr class="text-light">
                                 <th>Датчики</th>
                                 <th>Текущая</th>
                                 <th>MIN</th>
@@ -180,109 +180,109 @@
                         </thead>
                         <tbody class="text-success">
                             <tr>
-                                <td class="text-white">Sensor 1</td>
+                                <td class="text-light">Sensor 1</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 2</td>
+                                <td class="text-light">Sensor 2</td>
                                 <td class="text-danger">value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 3</td>
+                                <td class="text-light">Sensor 3</td>
                                 <td>value</td>
                                 <td class="text-danger">value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 4</td>
+                                <td class="text-light">Sensor 4</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 5</td>
+                                <td class="text-light">Sensor 5</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 6</td>
+                                <td class="text-light">Sensor 6</td>
                                 <td class="text-danger">value</td>
                                 <td class="text-danger">value</td>
                                 <td class="text-danger">value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 7</td>
+                                <td class="text-light">Sensor 7</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 8</td>
+                                <td class="text-light">Sensor 8</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 9</td>
+                                <td class="text-light">Sensor 9</td>
                                 <td>value</td>
                                 <td class="text-danger">value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 10</td>
+                                <td class="text-light">Sensor 10</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 11</td>
+                                <td class="text-light">Sensor 11</td>
                                 <td>value</td>
                                 <td class="text-danger">value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 12</td>
+                                <td class="text-light">Sensor 12</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 13</td>
+                                <td class="text-light">Sensor 13</td>
                                 <td class="text-danger">value</td>
                                 <td class="text-danger">value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 14</td>
+                                <td class="text-light">Sensor 14</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 15</td>
+                                <td class="text-light">Sensor 15</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 16</td>
+                                <td class="text-light">Sensor 16</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 17</td>
+                                <td class="text-light">Sensor 17</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
                             </tr>
                             <tr>
-                                <td class="text-white">Sensor 18</td>
+                                <td class="text-light">Sensor 18</td>
                                 <td>value</td>
                                 <td>value</td>
                                 <td>value</td>
@@ -299,38 +299,38 @@
                     <div class="card-content">
                         <table class='table table-block'>
                             <thead>
-                                <tr class="text-white">
+                                <tr class="text-light">
                                     <th>Расположение</th>
                                     <th>Состояние</th>
                                 </tr>
                             </thead>
                             <tbody class="text-success">
                                 <tr>
-                                    <td class="text-white">Вход 1</td>
+                                    <td class="text-light">Вход 1</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Вход 2</td>
+                                    <td class="text-light">Вход 2</td>
                                     <td>closed</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Чердак</td>
+                                    <td class="text-light">Чердак</td>
                                     <td>closed</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Окна душевая</td>
+                                    <td class="text-light">Окна душевая</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Окна раздевалка</td>
+                                    <td class="text-light">Окна раздевалка</td>
                                     <td>closed</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Окна фасад</td>
+                                    <td class="text-light">Окна фасад</td>
                                     <td>closed</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Ворота</td>
+                                    <td class="text-light">Ворота</td>
                                     <td class="text-danger">opened</td>
                                 </tr>
                             </tbody>
@@ -346,13 +346,13 @@
                     </div>
                     <div class="card-content">
                         <table class='table table-block'>
-                            <thead class="text-white">
+                            <thead class="text-light">
                                 <tr>
                                     <th>Расположение</th>
                                     <th>Состояние</th>
                                 </tr>
                             </thead>
-                            <tbody class="text-white">
+                            <tbody class="text-light">
                                 <tr>
                                     <td>Вход 1</td>
                                     <td class="text-success">off</td>
@@ -366,7 +366,7 @@
                                     <td class="text-danger">on</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Служебные помещения</td>
+                                    <td class="text-light">Служебные помещения</td>
                                     <td class="text-danger">on</td>
                                 </tr>
                                 <tr>
@@ -398,14 +398,14 @@
                     </div>
                     <div class="card-content">
                         <table class='table table-block'>
-                            <thead class="text-white">
+                            <thead class="text-light">
                                 <tr>
                                     <th>Расположение</th>
                                     <th>Состояние</th>
                                     <th>Авария</th>
                                 </tr>
                             </thead>
-                            <tbody class="text-white">
+                            <tbody class="text-light">
                                 <tr>
                                     <td>1-й блок</td>
                                     <td class="text-success">off</td>
@@ -422,7 +422,7 @@
                                     <td class="text-success">no</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-white">Служебные помещения</td>
+                                    <td class="text-light">Служебные помещения</td>
                                     <td class="text-danger">on</td>
                                     <td class="text-success">no</td>
                                 </tr>
@@ -469,7 +469,7 @@
         </div>
     </main>
     <!-- footer -->
-    <footer id="footer" class="text-white text-center">
+    <footer id="footer" class="text-light text-center">
         &copy;RIT, Kharkiv 2018
     </footer>
     <!-- Scripts -->
